--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -53,15 +53,19 @@
 	display: flex;
 
 	flex-direction: row;
-	padding: 50px;
+	padding: 10px;
 	gap: 120px;
 	align-items: center;
 	color: rgba(255, 255, 255, 0.52);
+}
+.footer2 h3 {
+	font-size: 15px;
 }
 .ikons {
 	display: flex;
 	align-items: center;
 	gap: 20px;
+	cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
@@ -74,11 +78,16 @@
 		flex-direction: column;
 		gap: 30px;
 	}
+	.footer2 h3 {
+		font-size: 15px;
+	}
+
 	.f1 {
 		align-items: start;
 	}
 	.ikons {
 		justify-content: center;
+		cursor: pointer;
 	}
 	.fot {
 		margin-right: 10px;
