--- a/components/main/Main.module.css
+++ b/components/main/Main.module.css
@@ -3,7 +3,7 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	height: 80vh;
+	margin-top: 50px;
 	padding: 0 20px;
 }
 
@@ -11,8 +11,8 @@
 	padding: 50px;
 	display: flex;
 	flex-direction: column;
-	align-items: start;
-	justify-content: start;
+	align-items: flex-start;
+	justify-content: flex-start;
 	gap: 25px;
 }
 .butons {
@@ -109,10 +109,10 @@
 		width: 100%;
 	}
 	.discordbtn {
-		padding: 3px 10px;
+		width: 250px;
 	}
 	.roadbtn {
-		padding: 3px 15px;
+		width: 250px;
 	}
 	.image {
 		height: auto;
