--- a/components/cards/Cards.module.css
+++ b/components/cards/Cards.module.css
@@ -11,8 +11,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	align-items: start;
-	justify-content: start;
+	align-items: flex-start;
+	justify-content: flex-start;
 }
 .title {
 	color: rgba(161, 29, 243, 1);
@@ -34,7 +34,7 @@
 	display: flex;
 	gap: 20px;
 	align-items: center;
-	justify-content: start;
+	justify-content: flex-start;
 }
 
 .button {
@@ -42,9 +42,9 @@
 	padding: 10px 100px;
 	border-radius: 20px; /* Yuvarlak köşeler */
 	cursor: pointer;
-	font-weight: 500; /* Yazı kalınlığı */
+	font-weight: 600; /* Yazı kalınlığı */
 	color: white; /* Yazı rengi */
-	font-size: 18px; /* Yazı boyutu */
+	font-size: 15px; /* Yazı boyutu */
 	background-image: linear-gradient(to right, rgba(161, 61, 172, 1), rgba(235, 106, 21, 1));
 }
 
