--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -12,7 +12,7 @@
 	display: flex;
 	flex-direction: row;
 	gap: 180px;
-	align-items: start;
+	align-items: flex-start;
 }
 
 .f1 {
@@ -20,22 +20,29 @@
 	flex-direction: column;
 	gap: 10px;
 }
+.f1 h2 {
+	font-size: 20px;
+	font-weight: 600;
+}
 .f1 p {
 	color: rgba(255, 255, 255, 0.52);
-	padding-bottom: 5px;
+	font-size: 13px;
+	padding-bottom: 10px;
 }
 
 .ul li {
 	list-style: none;
+	font-size: 14px;
+	padding: 3px;
 	color: rgba(255, 255, 255, 0.52);
 }
 
 .toolbar {
 	display: flex;
 	align-items: center;
-	gap: 15px; /* Araçlar arası boşluk */
+
 	border: 1px solid #ccc;
-	border-radius: 20px; /* Yuvarlak köşeler */
+	border-radius: 10px; /* Yuvarlak köşeler */
 	background-color: rgba(248, 248, 248, 0.3);
 }
 
@@ -46,15 +53,13 @@
 	outline: none;
 	color: white;
 	background-color: transparent;
-	padding: 15px;
-	border-radius: 20px; /* Yuvarlak köşeler */
+	padding: 10px;
+	border-radius: 5px; /* Yuvarlak köşeler */
 }
 .footer2 {
 	display: flex;
-
-	flex-direction: row;
 	padding: 10px;
-	gap: 120px;
+	gap: 150px;
 	align-items: center;
 	color: rgba(255, 255, 255, 0.52);
 }
@@ -62,9 +67,14 @@
 	font-size: 15px;
 }
 .ikons {
+	list-style: none;
 	display: flex;
 	align-items: center;
 	gap: 20px;
+	cursor: pointer;
+}
+.fot {
+	margin-right: 10px;
 	cursor: pointer;
 }
 
@@ -79,17 +89,21 @@
 		gap: 30px;
 	}
 	.footer2 h3 {
-		font-size: 15px;
+		font-size: 10px;
+		text-align: center;
 	}
 
 	.f1 {
-		align-items: start;
+		align-items: flex-start;
 	}
 	.ikons {
 		justify-content: center;
 		cursor: pointer;
+		width: 35px;
+		height: 35px;
 	}
 	.fot {
 		margin-right: 10px;
+		cursor: pointer;
 	}
 }
