--- a/components/navbar/Navbar.module.css
+++ b/components/navbar/Navbar.module.css
@@ -6,7 +6,7 @@
 .rnHeader {
 	color: white;
 	width: 100%;
-	position: fixed;
+	/* position: fixed; */
 	top: 0;
 	transition: all 0.3s ease;
 	z-index: 1000;
@@ -80,7 +80,7 @@
 	border: none;
 	outline: none;
 	background-color: transparent;
-	padding: 8px;
+	padding: 7px;
 	border-radius: 20px; /* Yuvarlak köşeler */
 	color: white;
 }
@@ -89,10 +89,10 @@
 .button {
 	border: none;
 	padding: 8px;
-	margin: 5px;
+	margin: 3px;
 	border-radius: 20px; /* Yuvarlak köşeler */
 	cursor: pointer;
-	font-weight: 500; /* Yazı kalınlığı */
+	font-weight: 600; /* Yazı kalınlığı */
 	color: white; /* Yazı rengi */
 	font-size: 14px; /* Yazı boyutu */
 }
@@ -227,7 +227,7 @@
 .rnHeader {
 	color: white;
 	width: 100%;
-	position: fixed;
+	/* position: fixed; */
 	top: 0;
 	transition: all 0.3s ease;
 	z-index: 1000;
@@ -266,6 +266,16 @@
 }
 
 @media only screen and (max-width: 1024px) {
+	.rnHeader {
+		color: white;
+		width: 100%;
+		position: fixed;
+		top: 0;
+		transition: all 0.3s ease;
+		z-index: 1000;
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	}
+
 	.dropdownMenu {
 		position: absolute;
 		color: black;
@@ -321,7 +331,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 100vh;
+
 		transform: translateX(0);
 		transition: transform 0.3s ease-in-out;
 		z-index: 100; /* Menünün diğer öğelerin üzerinde görünmesini sağlar */
@@ -341,6 +351,7 @@
 	}
 	.toolbar {
 		width: 200px;
+		margin-top: 100px;
 	}
 	.button {
 		width: 200px;
