--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -79,14 +79,19 @@
 }
 
 @media screen and (max-width: 768px) {
+	.container {
+		padding: 10px;
+	}
 	.footer {
 		flex-direction: column;
 		align-items: flex-start;
 		gap: 20px;
+		padding: 0px;
 	}
 	.footer2 {
 		flex-direction: column;
 		gap: 30px;
+		padding: 0px;
 	}
 	.footer2 h3 {
 		font-size: 10px;
