--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -77,9 +77,11 @@
 	cursor: pointer;
 }
 .btn {
-	background-color: transparent;
+	background-color: rgba(255, 255, 255, 0.52);
 	border-radius: 5px;
 	cursor: pointer;
+	font-size: 20px;
+	padding: 10px;
 }
 @media screen and (max-width: 768px) {
 	.container {
@@ -115,8 +117,10 @@
 		cursor: pointer;
 	}
 	.btn {
-		background-color: transparent;
+		background-color: rgba(255, 255, 255, 0.52);
 		border-radius: 5px;
+		padding: 5px;
 		cursor: pointer;
+		font-size: 15px;
 	}
 }
