--- a/components/cards/Cards.module.css
+++ b/components/cards/Cards.module.css
@@ -2,10 +2,9 @@
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
-
-	justify-content: center; /* Yatayda ortala */
-	margin: auto; /* Sayfanın yatay ortasına al */
-	max-width: 1300px; /* İsteğe bağlı: Genişlik sınırlaması */
+	justify-content: center;
+	margin: auto;
+	max-width: 1300px;
 }
 .titles {
 	display: flex;
@@ -40,11 +39,11 @@
 .button {
 	border: none;
 	padding: 10px 100px;
-	border-radius: 20px; /* Yuvarlak köşeler */
+	border-radius: 20px;
 	cursor: pointer;
-	font-weight: 600; /* Yazı kalınlığı */
-	color: white; /* Yazı rengi */
-	font-size: 15px; /* Yazı boyutu */
+	font-weight: 600;
+	color: white;
+	font-size: 15px;
 	background-image: linear-gradient(to right, rgba(161, 61, 172, 1), rgba(235, 106, 21, 1));
 }
 
