--- a/components/main/Main.module.css
+++ b/components/main/Main.module.css
@@ -38,20 +38,20 @@
 }
 
 .butons button {
-	border-radius: 20px;
-	padding: 8px 10px;
 	width: 120px;
-	color: white;
-	background: linear-gradient(to right, rgba(173, 19, 245, 1), rgba(0, 194, 255, 0.79));
-	cursor: pointer;
-	font-size: 15px;
 	margin: 0 5px;
-	font-weight: bold;
+	border: none;
+	padding: 5px 25px;
+	border-radius: 20px;
+	cursor: pointer;
+	font-weight: 600;
+	color: white;
+	font-size: 15px;
+	background-image: linear-gradient(to right, rgba(173, 19, 245, 1), rgba(0, 194, 255, 0.79));
 }
 
 .butons button:nth-child(1) {
-	border: 2px solid transparent;
-	background: linear-gradient(to right, rgba(173, 19, 245, 1), rgba(0, 194, 255, 0.79));
+	background-image: linear-gradient(to right, rgba(173, 19, 245, 1), rgba(0, 194, 255, 0.79));
 }
 
 .butons button:nth-child(2) {
@@ -67,31 +67,26 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 3px 15px;
 	gap: 10px;
-	border: 2px solid transparent;
+	border: none;
+	padding: 10px 40px;
 	border-radius: 20px;
-	background-image: linear-gradient(to right, rgba(204, 63, 165, 1), rgba(173, 19, 245, 1));
-	color: white;
-	font-size: 18px;
 	cursor: pointer;
-	transition: all 0.3s ease;
+	font-weight: 600;
+	color: white;
+	font-size: 15px;
+	background-image: linear-gradient(to right, rgba(204, 63, 165, 1), rgba(173, 19, 245, 1));
 }
 .roadbtn {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 3px 25px;
-	gap: 5px;
-	border: 2px solid transparent;
+	border: none;
+	padding: 15px 45px;
 	border-radius: 20px;
-	background-image: linear-gradient(to right, rgba(212, 118, 47, 1), rgba(40, 201, 230, 1));
-
-	color: white;
-	font-size: 18px;
-	letter-spacing: 10px;
 	cursor: pointer;
-	transition: all 0.3s ease;
+	font-weight: 600;
+	color: white;
+	font-size: 15px;
+	background-image: linear-gradient(to right, rgba(212, 118, 47, 1), rgba(40, 201, 230, 1));
+	letter-spacing: 10px;
 }
 
 @media screen and (max-width: 768px) {
@@ -113,10 +108,10 @@
 		width: 100%;
 	}
 	.discordbtn {
-		width: 250px;
+		padding: 5px 100px;
 	}
 	.roadbtn {
-		width: 250px;
+		padding: 5px 100px;
 	}
 	.image {
 		height: auto;
